- Refactor + optimize code. - Remove unused file + add new component. - Move from Rest API to GraphQL API.

--- a/.eslintrc
+++ b/.eslintrc
@@ -97,5 +97,9 @@
         ],
       },
     },
+    {
+      "files": ["**/*.slice.ts"],
+      "rules": { "no-param-reassign": ["error", { "props": false }] },
+    },
   ],
 }
