--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
-    "react-query": "^3.39.3",
-    "axios": "^1.7.7"
+    "@apollo/client": "^3.11.8",
+    "graphql": "^16.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -70,6 +71,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^8.0.3",
     "jest": "^29.6.3",
     "jest-expo": "~51.0.4",
